# Lights

./: .gitignore  README.md
common/: common_objects.py
db/: sqlite.db
light-crud-api/: Cargo.toml  build_and_sync.sh  config.toml
light-crud-api/src/: command.rs  config.rs  database_stuff.rs  frame.rs  frame_data.rs  location.rs  main.rs  thread_utils.rs
light-crud-api/src/database/: Chat_GPT_feedback_server.rs  animation.rs  frame.rs  frame_data.rs  initialize.rs  location.rs  mod.rs
light-crud-api/src/lights/: controller.rs  converter.rs  mod.rs
light-crud-api/src/timed/: timing.rs
rpi/: commands.py  config.py  display.py  light_demo.service  main.py  mqtt_receiver.py  requirements.txt  state_machine.md  test_neopixels.py
rpi/patterns/: patterns.py
rpi/states/: State.py  Transitions.py  idle_state.py  state_machine.py  steady_on_state.py
rpi/testing_rust_crud/: test_enpoints.py
visualizer/: app.py  main.py
