[package]
name = "light-crud-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
serde = "1.0.214"
serde_derive = "1.0.214"
serde_json = "1.0.132"
sqlx = {version="0.8.2", features=["runtime-tokio-native-tls","sqlite"]}
tokio = {version="1.41.1", features=["macros","rt-multi-thread"]}
toml = "0.8.19"
